--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This contains some stuff made for different version of WWJ (probably obsolete).
+This contains some stuff made for WorldWindJava.
+Be aware. This code was made for very old WWJ versions 0.4 and 0.5.
+
+Feel free to contact with me for any help or sugestion.
+
