--- a/README
+++ b/README
@@ -3,3 +3,4 @@ Be aware. This code was made for very old WWJ versions 0.4 and 0.5.
 
 Feel free to contact with me for any help or sugestion.
 
+Some videos and screenshots are available in my old blog [The Balloon Project](http://theballoonproject.blogspot.com.es/)
